React Router added, mobile version layout changed

--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/rus-sharafiev/kodiMysqlLibrary#readme",
   "dependencies": {
-    "esbuild": "^0.15.12",
+    "esbuild": "^0.15.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
+    "workbox-cli": "^6.5.4",
+    "workbox-window": "^6.5.4"
   }
 }
