--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kodi",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Kodi Home Movies Library",
   "main": "app.jsx",
   "scripts": {
-    "watch": "esbuild app.jsx --outfile=build/index.js --bundle --watch",
-    "build": "esbuild app.jsx --outfile=build/index.js --bundle --minify --external:*.woff2"
+    "watch": "esbuild app.tsx --outfile=build/index.js --bundle --watch",
+    "build": "esbuild app.tsx --outfile=build/index.js --bundle --minify --external:*.woff2"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/rus-sharafiev/kodiMysqlLibrary#readme",
   "dependencies": {
+    "@bubblewrap/cli": "^1.18.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "esbuild": "^0.15.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
+    "typescript": "^4.9.4",
     "workbox-cli": "^6.5.4",
     "workbox-window": "^6.5.4"
   }
