--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-node_modules
-index.js
-index.css
-app
-CSS
-hidden
-.hintrc
-.htaccess
+
+# dependencies
+/node_modules
+
+# production
+/build
+/b
