--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "kodi",
-  "version": "2.1.0",
-  "description": "Kodi Home Movies Library",
-  "main": "app.jsx",
+  "name": "kodi-mysql-library",
+  "version": "2.0.0",
+  "description": "",
+  "main": "src/index.tsx",
   "scripts": {
-    "watch": "esbuild app.tsx --outfile=build/index.js --bundle --watch",
-    "build": "esbuild app.tsx --outfile=build/index.js --bundle --minify --external:*.woff2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rus-sharafiev/kodiMysqlLibrary.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rus Sharafiev",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rus-sharafiev/kodiMysqlLibrary/issues"
-  },
-  "homepage": "https://github.com/rus-sharafiev/kodiMysqlLibrary#readme",
   "dependencies": {
-    "@bubblewrap/cli": "^1.18.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "esbuild": "^0.15.13",
+    "@material/web": "^1.0.0-pre.10",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@russh/fetch-api": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3",
-    "typescript": "^4.9.4",
-    "workbox-cli": "^6.5.4",
-    "workbox-window": "^6.5.4"
+    "react-redux": "^8.1.0",
+    "react-router-dom": "^6.13.0",
+    "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.5",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
