--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
+    "swiper": "^9.4.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
