--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "swiper": "^9.4.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "workbox": "^0.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-window": "^7.0.0"
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.5",
